Former-commit-id: a41f3b3f9f243fdb719bcf408fcdab731d26afae

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -144,30 +144,7 @@ CartItemsPage = Ablage
 #
 # Choose Workspace
 #
-
-ChooseWorkspacePage =  Arbeitsbereich ausw\u00E4hlen
-
-chooseWorkspace_descImportWorkspace = Beschreibung Import Bereich Deutsch.
-
-chooseWorkspace_descQAWorkspace = Beschreibung QA Bereich Deutsch.
-
-chooseWorkspace_descReportWorkspace = Beschreibung  Report Bereich Deutsch.
-
-chooseWorkspace_descYearbookWorkspace = Beschreibung Jahrbuch Bereich Deutsch.
-
-chooseWorkspace_lnkQAWorkspace = QA Bereich
-
-chooseWorkspace_lnkReportWorkspace = T\u00E4tigkeitsbericht Bereich
-
-chooseWorkspace_lnkYearbookWorkspace = Jahrbuch Bereich
-
-chooseWorkspace_optMenuImportWorkspace = IMPORT BEREICH
-
-chooseWorkspace_optMenuQAWorkspace = QA BEREICH
-
-chooseWorkspace_optMenuReportWorkspace = T\u00C4TIGKEITSBERICHT BEREICH
-
-chooseWorkspace_optMenuYearbookWorkspace = JAHRBUCH BEREICH
+ChooseWorkspacePage = Arbeitsbereich ausw\u00E4hlen
 
 CollaboratorPage = Collaborator
 
@@ -1645,17 +1622,17 @@ WithdrawItem_lnkPublication = Ver\u00F6ffentlichung
 
 WithdrawItem_lnkWithdraw = Zur\u00FCckziehen
 
+WorkspacesPage = Arbeitsbereiche
+
 Year = Jahr
 
-YearbookCandidatesPage = Jahrbuch Kandidaten
+YearbookCandidatesPage = Kandidaten
 
 YearbookInvalidItemsPage = Ung\u00FCltige Datens\u00E4tze\u0009
 
 YearbookItemCreatePage = Erstelle Jahrbuch
 
-YearbookMembersPage = Jahrbuch Mitglieder
-
-WorkspacesPage = Arbeitsbereiche
+YearbookMembersPage = Mitglieder
 
 about = \u00DCber PubMan
 
@@ -1926,6 +1903,28 @@ affiliation_detail_phone = Telefon
 all = alle auw\u00E4hlen
 
 cancel = Abbrechen
+
+chooseWorkspace_descImportWorkspace = Beschreibung Import Bereich Deutsch.
+
+chooseWorkspace_descQAWorkspace = Beschreibung QA Bereich Deutsch.
+
+chooseWorkspace_descReportWorkspace = Beschreibung  Report Bereich Deutsch.
+
+chooseWorkspace_descYearbookWorkspace = Beschreibung Jahrbuch Bereich Deutsch.
+
+chooseWorkspace_lnkQAWorkspace = QA Bereich
+
+chooseWorkspace_lnkReportWorkspace = T\u00E4tigkeitsbericht Bereich
+
+chooseWorkspace_lnkYearbookWorkspace = Jahrbuch Bereich
+
+chooseWorkspace_optMenuImportWorkspace = IMPORT BEREICH
+
+chooseWorkspace_optMenuQAWorkspace = QA BEREICH
+
+chooseWorkspace_optMenuReportWorkspace = T\u00C4TIGKEITSBERICHT BEREICH
+
+chooseWorkspace_optMenuYearbookWorkspace = JAHRBUCH BEREICH
 
 component_content-category = Art des Inhalts
 
@@ -2546,4 +2545,3 @@ viewItemFullPage = Datensatz ansehen
 warning_lblMessageHeader = Systemnachrichten und Warnungen:
 
 yes = Ja
-
