--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -143,29 +143,7 @@ CartItemsPage = Basket
 #
 # Choose Workspace
 #
-ChooseWorkspacePage =  Choose Workspace
-
-chooseWorkspace_descImportWorkspace = Description Import Workspace English.
-
-chooseWorkspace_descQAWorkspace = Description QA Workspace English.
-
-chooseWorkspace_descReportWorkspace = Description Report Workspace English.
-
-chooseWorkspace_descYearbookWorkspace = Description Yearbook Workspace English.
-
-chooseWorkspace_lnkQAWorkspace = QA Workspace
-
-chooseWorkspace_lnkReportWorkspace = Report Workspace
-
-chooseWorkspace_lnkYearbookWorkspace = Yearbook Workspace
-
-chooseWorkspace_optMenuImportWorkspace = IMPORT WORKSPACE
-
-chooseWorkspace_optMenuQAWorkspace = QA WORKSPACE
-
-chooseWorkspace_optMenuReportWorkspace = REPORT WORKSPACE
-
-chooseWorkspace_optMenuYearbookWorkspace = YEARBOOK WORKSPACE
+ChooseWorkspacePage = Choose Workspace
 
 CollaboratorPage = Collaborator
 
@@ -180,7 +158,6 @@ CreateNewRevision_ChooseCollection = Please choose a collection by clicking on t
 CreateNewRevision_ChooseCollection_lblReleased = Release Date
 
 CreateNewRevision_CreateNewRevision = Create new revision
-
 
 #
 # Create new revision
@@ -1644,17 +1621,17 @@ WithdrawItem_lnkPublication = Publication
 
 WithdrawItem_lnkWithdraw = Withdraw
 
+WorkspacesPage = Workspaces
+
 Year = Year
 
-YearbookCandidatesPage = Yearbook Candidates
+YearbookCandidatesPage = Candidates
 
 YearbookInvalidItemsPage = Invalid Items
 
 YearbookItemCreatePage = Create Yearbook
 
-YearbookMembersPage = Yearbook Members
-
-WorkspacesPage = Workspaces
+YearbookMembersPage = Members
 
 about = About PubMan
 
@@ -1925,6 +1902,28 @@ affiliation_detail_phone = Telephone
 all = Select all
 
 cancel = Cancel
+
+chooseWorkspace_descImportWorkspace = Description Import Workspace English.
+
+chooseWorkspace_descQAWorkspace = Description QA Workspace English.
+
+chooseWorkspace_descReportWorkspace = Description Report Workspace English.
+
+chooseWorkspace_descYearbookWorkspace = Description Yearbook Workspace English.
+
+chooseWorkspace_lnkQAWorkspace = QA Workspace
+
+chooseWorkspace_lnkReportWorkspace = Report Workspace
+
+chooseWorkspace_lnkYearbookWorkspace = Yearbook Workspace
+
+chooseWorkspace_optMenuImportWorkspace = IMPORT WORKSPACE
+
+chooseWorkspace_optMenuQAWorkspace = QA WORKSPACE
+
+chooseWorkspace_optMenuReportWorkspace = REPORT WORKSPACE
+
+chooseWorkspace_optMenuYearbookWorkspace = YEARBOOK WORKSPACE
 
 component_content-category = Content category
 
@@ -2546,4 +2545,3 @@ viewItemFullPage = View item
 warning_lblMessageHeader = System Messages and Warnings:
 
 yes = Yes
-
