--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -143,29 +143,7 @@ CartItemsPage = Cesta
 #
 # Choose Workspace
 #
-ChooseWorkspacePage =  Elegir Workspace
-
-chooseWorkspace_descImportWorkspace = Description Import Workspace Spanish.
-
-chooseWorkspace_descQAWorkspace = Description QA Workspace Spanish.
-
-chooseWorkspace_descReportWorkspace = Description Report Workspace Spanish.
-
-chooseWorkspace_descYearbookWorkspace = Description Yearbook Workspace Spanish.
-
-chooseWorkspace_lnkQAWorkspace = QA Workspace
-
-chooseWorkspace_lnkReportWorkspace = Report Workspace
-
-chooseWorkspace_lnkYearbookWorkspace = Yearbook Workspace
-
-chooseWorkspace_optMenuImportWorkspace = IMPORT WORKSPACE
-
-chooseWorkspace_optMenuQAWorkspace = QA WORKSPACE
-
-chooseWorkspace_optMenuReportWorkspace = REPORT WORKSPACE
-
-chooseWorkspace_optMenuYearbookWorkspace = YEARBOOK WORKSPACE
+ChooseWorkspacePage = Elegir Workspace
 
 CollaboratorPage = Colaborador 
 
@@ -1635,15 +1613,15 @@ WithdrawItem_lnkPublication = Publicaci\u00F3n
 
 WithdrawItem_lnkWithdraw = Retirar
 
-YearbookCandidatesPage = Yearbook Candidates
+WorkspacesPage = Workspaces
+
+YearbookCandidatesPage = Candidates
 
 YearbookInvalidItemsPage = Invalid Items
 
 YearbookItemCreatePage = Create Yearbook
 
-YearbookMembersPage = Yearbook Members
-
-WorkspacesPage = Workspaces
+YearbookMembersPage = Members
 
 about = Sobre PubMan
 
@@ -1870,6 +1848,28 @@ affiliation_detail_phone = Tel\u00E9fono
 all = Seleccionaro todo
 
 cancel = Cancelar
+
+chooseWorkspace_descImportWorkspace = Description Import Workspace Spanish.
+
+chooseWorkspace_descQAWorkspace = Description QA Workspace Spanish.
+
+chooseWorkspace_descReportWorkspace = Description Report Workspace Spanish.
+
+chooseWorkspace_descYearbookWorkspace = Description Yearbook Workspace Spanish.
+
+chooseWorkspace_lnkQAWorkspace = QA Workspace
+
+chooseWorkspace_lnkReportWorkspace = Report Workspace
+
+chooseWorkspace_lnkYearbookWorkspace = Yearbook Workspace
+
+chooseWorkspace_optMenuImportWorkspace = IMPORT WORKSPACE
+
+chooseWorkspace_optMenuQAWorkspace = QA WORKSPACE
+
+chooseWorkspace_optMenuReportWorkspace = REPORT WORKSPACE
+
+chooseWorkspace_optMenuYearbookWorkspace = YEARBOOK WORKSPACE
 
 component_content-category = Categor\u00EDa de contenido
 
@@ -2445,4 +2445,3 @@ viewItemFullPage = Ver Item
 warning_lblMessageHeader = Mensajes del Sistema y Advertencias:
 
 yes = S\u00ED
-
