--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -143,30 +143,7 @@ CartItemsPage = \u4E00\u6642\u4FDD\u5B58
 #
 # Choose Workspace
 #
-
-ChooseWorkspacePage =  Choose Workspace
-
-chooseWorkspace_descImportWorkspace = Description Import Workspace Japanese.
-
-chooseWorkspace_descQAWorkspace = Description QA Workspace Japanese.
-
-chooseWorkspace_descReportWorkspace = Description Report Workspace Japanese.
-
-chooseWorkspace_descYearbookWorkspace = Description Yearbook Workspace Japanese.
-
-chooseWorkspace_lnkQAWorkspace = QA Workspace
-
-chooseWorkspace_lnkReportWorkspace = Report Workspace
-
-chooseWorkspace_lnkYearbookWorkspace = Yearbook Workspace
-
-chooseWorkspace_optMenuImportWorkspace = IMPORT WORKSPACE
-
-chooseWorkspace_optMenuQAWorkspace = QA WORKSPACE
-
-chooseWorkspace_optMenuReportWorkspace = REPORT WORKSPACE
-
-chooseWorkspace_optMenuYearbookWorkspace = YEARBOOK WORKSPACE
+ChooseWorkspacePage = Choose Workspace
 
 CollaboratorPage = Collaborator
 
@@ -1621,17 +1598,17 @@ WithdrawItem_lnkPublication = \u30A2\u30A4\u30C6\u30E0
 
 WithdrawItem_lnkWithdraw = \u53D6\u308A\u4E0B\u3052
 
+WorkspacesPage = Workspaces
+
 Year = \u520A\u884C\u5E74
 
-YearbookCandidatesPage = Yearbook Candidates
+YearbookCandidatesPage = Candidates
 
 YearbookInvalidItemsPage = Invalid Items
 
 YearbookItemCreatePage = Create Yearbook
 
-YearbookMembersPage = Yearbook Members
-
-WorkspacesPage = Workspaces
+YearbookMembersPage = Members
 
 about = PubMan\u306B\u3064\u3044\u3066
 
@@ -1902,6 +1879,28 @@ affiliation_detail_phone = \u96FB\u8A71\u756A\u53F7
 all = \u5168\u3066\u3092\u9078\u629E
 
 cancel = \u30AD\u30E3\u30F3\u30BB\u30EB
+
+chooseWorkspace_descImportWorkspace = Description Import Workspace Japanese.
+
+chooseWorkspace_descQAWorkspace = Description QA Workspace Japanese.
+
+chooseWorkspace_descReportWorkspace = Description Report Workspace Japanese.
+
+chooseWorkspace_descYearbookWorkspace = Description Yearbook Workspace Japanese.
+
+chooseWorkspace_lnkQAWorkspace = QA Workspace
+
+chooseWorkspace_lnkReportWorkspace = Report Workspace
+
+chooseWorkspace_lnkYearbookWorkspace = Yearbook Workspace
+
+chooseWorkspace_optMenuImportWorkspace = IMPORT WORKSPACE
+
+chooseWorkspace_optMenuQAWorkspace = QA WORKSPACE
+
+chooseWorkspace_optMenuReportWorkspace = REPORT WORKSPACE
+
+chooseWorkspace_optMenuYearbookWorkspace = YEARBOOK WORKSPACE
 
 component_content-category = \u5185\u5BB9\u7A2E\u5225
 
@@ -2511,4 +2510,3 @@ viewItemFullPage = \u8A73\u7D30\u8868\u793A
 warning_lblMessageHeader = \u30B7\u30B9\u30C6\u30E0\u30E1\u30C3\u30BB\u30FC\u30B8 / \u8B66\u544A:
 
 yes = \u62DB\u5F85
-
