PUBMAN-1520 implemented : Yearbook@PubMan
Former-commit-id: 424e98620019e558dc8823f408d444ceff13832d

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1634,6 +1634,8 @@ YearbookItemCreatePage = Erstelle Jahrbuch
 
 YearbookMembersPage = Mitglieder
 
+YearbookPage = Jahrbuch
+
 about = \u00DCber PubMan
 
 #
