--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -1633,6 +1633,8 @@ YearbookItemCreatePage = Create Yearbook
 
 YearbookMembersPage = Members
 
+YearbookPage = Yearbook
+
 about = About PubMan
 
 #
