--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -1623,6 +1623,8 @@ YearbookItemCreatePage = Create Yearbook
 
 YearbookMembersPage = Members
 
+YearbookPage = Yearbook
+
 about = Sobre PubMan
 
 #
