--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -1610,6 +1610,8 @@ YearbookItemCreatePage = Create Yearbook
 
 YearbookMembersPage = Members
 
+YearbookPage = Yearbook
+
 about = PubMan\u306B\u3064\u3044\u3066
 
 #
