PUBMAN-1520 implemented : Yearbook@PubMan
Former-commit-id: 8e0dece0baeb7fd5900b06747318a039abc7ea3b

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1634,7 +1634,15 @@ YearbookItemCreatePage = Erstelle Jahrbuch
 
 YearbookMembersPage = Mitglieder
 
+YearbookNonCandidatesPage = Andere
+
 YearbookPage = Jahrbuch
+
+Yearbook_addToYearbook = Dem Jahrbuch hinzuf\u00FCgen
+
+Yearbook_removeFromYearbook = Aus dem Jahrbuch entfernen
+
+Yearbook_validate = Validieren
 
 about = \u00DCber PubMan
 
