--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -1623,7 +1623,15 @@ YearbookItemCreatePage = Create Yearbook
 
 YearbookMembersPage = Members
 
+YearbookNonCandidatesPage = Non Candidates
+
 YearbookPage = Yearbook
+
+Yearbook_addToYearbook = Add to Yearbook
+
+Yearbook_removeFromYearbook = Remove from Yearbook
+
+Yearbook_validate = Validate
 
 about = Sobre PubMan
 
