--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -1610,7 +1610,15 @@ YearbookItemCreatePage = Create Yearbook
 
 YearbookMembersPage = Members
 
+YearbookNonCandidatesPage = Non Candidates
+
 YearbookPage = Yearbook
+
+Yearbook_addToYearbook = Add to Yearbook
+
+Yearbook_removeFromYearbook = Remove from Yearbook
+
+Yearbook_validate = Validate
 
 about = PubMan\u306B\u3064\u3044\u3066
 
