--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -1633,7 +1633,15 @@ YearbookItemCreatePage = Create Yearbook
 
 YearbookMembersPage = Members
 
+YearbookNonCandidatesPage = Non Candidates
+
 YearbookPage = Yearbook
+
+Yearbook_addToYearbook = Add to Yearbook
+
+Yearbook_removeFromYearbook = Remove from Yearbook
+
+Yearbook_validate = Validate
 
 about = About PubMan
 
