Common presentation + yb validation
Former-commit-id: ba384cbdac300204e59999dbc11851d4da310533

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -51,6 +51,8 @@ ConfirmRollbackItemVersion = Wollen Sie die aktuelle Version mit dieser Version 
 
 CreatorFamilyNameNotProvided = Der Nachname des Urhebers muss noch angegeben werden.
 
+CreatorGivennameNotProvided = [NEW] Der Vorname des Urhebers muss noch angegeben werden.
+
 CreatorNotProvided = Es muss mindestens ein Urheber eingegeben werden.
 
 CreatorOrganizationNameNotProvided = Ein Organisationsname muss noch angegeben werden.
@@ -81,7 +83,11 @@ ErrorParsingCreatorString = Der angegebene Text ist leer oder konnte nicht erkan
 
 EventNotProvided = Wenn das Genre "Konferenzband", "Konferenzbeitrag", "Vortrag", "Konferenzbericht" oder "Lehrmaterial" ist, so muss eine Veranstaltung/Konferenz angegeben werden.
 
+EventPlaceRequired = [NEW] Der Ort der Veranstaltung muss angegeben werden.
+
 EventTitleNotProvided = Wenn Angaben zu einer Veranstaltung/Konferenz gemacht werden, muss ebenfalls ein Titel f\u00FCr die Veranstaltung/Konferenz angegeben werden.
+
+EventTitleRequired = [NEW] Der Name der Veranstaltung muss angegeben werden.
 
 GenreNotProvided = Bitte geben Sie das Genre an.
 
@@ -112,7 +118,13 @@ MpdlCreatorRequired = Mindestens ein Autor muss entweder die MPDL selbst oder je
 
 NoConeJournal = Journal nicht in CONE. 
 
+NoMaxPlanckAffiliation = [NEW] Mindestens ein Urheber muss einer Max Planck Einrichtung zugeordnet sein.
+
 NoPublicFileProvided = Es muss mindestens eine Datei mit der Zugangsbeschr\u00E4nkung "\u00F6ffentlich" hochgeladen werden.
+
+NoSequenceInformationGiven = [NEW] Entweder die Artikelnummer oder Start- und Endseite m\u00FCssen angegeben werden.
+
+NoYearbookGenre = [NEW] Dieser Dokumenttyp ist f\u00FCr das Jahrbuch nicht zugelassen.
 
 NumberOfPagesAssumed = Bitte geben Sie die Gesamtseitenzahl an.
 
@@ -124,11 +136,25 @@ PublisherNameNotProvided = Bei den Angaben zur Ver\u00F6ffentlichung des Inhalts
 
 PublisherNameSourceNotProvided = Bei den Angaben zur Ver\u00F6ffentlichung der Quelle fehlt der Name des Verlags.
 
+PublisherNotProvided = [NEW] Der Verlag muss angegeben werden.
+
+PublisherPlaceNotProvided = [NEW] Der Verlagsort muss angegeben werden.
+
+PublishingDateNotProvided = [NEW] Es muss ein Erscheinungsdatum angegeben werden.
+
 ReviewMethodInternalNotProvided = Es muss eine interne Begutachtung spezifiziert werden.
 
 ReviewMethodNotProvided = Wenn ein Erscheinungsdatum ausgef\u00FCllt ist, muss auch die Art der Begutachtung angegeben werden.
 
 SlashInFilename = Der Dateiname darf keinen Schr\u00E4gstrich "/" enthalten.
+
+SourceCreatorFamilyNameNotProvided = [NEW] Der Nachname des Urhebers der Quelle muss angegeben werden.
+
+SourceCreatorGivennameNotProvided = [NEW] Der Vorname des Urhebers der Quelle muss angeben werden.
+
+SourceCreatorOrganizationNameNotProvided = [NEW] Der Name des Urhebers (Organisation) der Quelle muss angegeben werden.
+
+SourceCreatorRoleInvalid = [NEW] Der Urheber der Quelle muss entweder Autor oder Herausgeber sein.
 
 SourceCreatorRoleNotProvided = Die Rolle des Urhebers der Quelle muss angegeben werden.
 
@@ -150,6 +176,8 @@ StartPageNotProvided = Startseite angeben.
 StatisticsUpdatedDaily = Hinweis: Statistische Daten werden t\u00E4glich aktualisiert.
 
 TitleNotProvided = Bitte geben Sie einen Titel ein.
+
+TotalNumberOfPagesNotProvided = [NEW] Die Gesamtseitenzahl muss angegeben werden.
 
 UnknownLanguageCode = Der eingegebene Sprachcode existiert nicht in ISO639-3
 
