--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -34,8 +34,6 @@ Affiliations_reloaded = ... el \u00E1rbol de afiliaci\u00F3n se ha recargado.
 
 AuthorNotProvided = Tiene que proporcionar un creador en el tipo de autor.
 
-chooseWorkspace = Please choose a workspace to edit the items.
-
 ComponentContentCategoryNotProvided = Falta definir un tipo de contenido para el fichero adjuntado (ej. Resumen, Pre-print, etc.)
 
 ComponentContentCategoryNotProvidedEasySubmission = Falta definir un tipo de contenido para el fichero adjuntado (ej. resumen, Pre-print, etc.). Por favor, a\u00F1ada esta informaci\u00F3n y vuelva a cargar el fichero.
@@ -53,6 +51,8 @@ ComponentRequired = Por favor, cargue al menos un fichero o introduzca un locali
 ComponentVisibilityNotProvided = Falta la especificaci\u00F3n de la visibilidad del fichero adjuntado.
 
 CreatorFamilyNameNotProvided = No se ha proporcionado el apellido del creador.
+
+CreatorGivennameNotProvided = [NEW] Der Vorname des Urhebers muss noch angegeben werden.
 
 CreatorNotProvided = Se requiere al menos un creador.
 
@@ -74,7 +74,11 @@ ErrorParsingCreatorString = La cadena de autor est\u00E1 vac\u00EDa o no pudo se
 
 EventNotProvided = Si el g\u00E9nero es igual a "Actas", "Presentaci\u00F3n a Congresos" "Charla en un evento", "Informe de Conferencia" o "Ense\u00F1anza", es necesario proporcionar un evento.
 
+EventPlaceRequired = [NEW] Der Ort der Veranstaltung muss angegeben werden.
+
 EventTitleNotProvided = Si se introducen fechas de evento, es necesario introducir tambi\u00E9n un t\u00EDtulo de evento.
+
+EventTitleRequired = [NEW] Der Name der Veranstaltung muss angegeben werden.
 
 GenreNotProvided = Por favor, especifique el G\u00E9nero.
 
@@ -97,7 +101,13 @@ MpdlCreatorRequired = Al menos un autor debe pertenecer a la EOI o estar afiliad
 
 NoDDCKeyword = La palabra clave introducida no es conforme con la clasificaci\u00F3n DDC.
 
+NoMaxPlanckAffiliation = [NEW] Mindestens ein Urheber muss einer Max Planck Einrichtung zugeordnet sein.
+
 NoPublicFileProvided = Se debe cargar al menos un fichero con visibilidad "p\u00FAblica" para este item.
+
+NoSequenceInformationGiven = [NEW] Entweder die Artikelnummer oder Start- und Endseite m\u00FCssen angegeben werden.
+
+NoYearbookGenre = [NEW] Dieser Dokumenttyp ist f\u00FCr das Jahrbuch nicht zugelassen.
 
 NumberOfPagesAssumed = Se acepta el n\u00FAmero de p\u00E1ginas.
 
@@ -107,9 +117,23 @@ OrganizationalMetadataNotProvided = Al menos un creador necesita una unidad orga
 
 PublisherNameNotProvided = Se ha introducido informaci\u00F3n de publicaci\u00F3n sin un editor.
 
+PublisherNotProvided = [NEW] Der Verlag muss angegeben werden.
+
+PublisherPlaceNotProvided = [NEW] Der Verlagsort muss angegeben werden.
+
+PublishingDateNotProvided = [NEW] Es muss ein Erscheinungsdatum angegeben werden.
+
 ReviewMethodInternalNotProvided = El M\u00E9todo de Revisi\u00F3n tiene que tener el valor "interno".
 
 ReviewMethodNotProvided = Si se ha introducido una fecha para el tipo "publicaci\u00F3n impresa", se debe proporcionar el tipo de revisi\u00F3n.
+
+SourceCreatorFamilyNameNotProvided = [NEW] Der Nachname des Urhebers der Quelle muss angegeben werden.
+
+SourceCreatorGivennameNotProvided = [NEW] Der Vorname des Urhebers der Quelle muss angeben werden.
+
+SourceCreatorOrganizationNameNotProvided = [NEW] Der Name des Urhebers (Organisation) der Quelle muss angegeben werden.
+
+SourceCreatorRoleInvalid = [NEW] Der Urheber der Quelle muss entweder Autor oder Herausgeber sein.
 
 SourceCreatorRoleNotProvided = No se ha proporcionado el rol de creador de una fuente.
 
@@ -122,6 +146,8 @@ SourceTitleNotProvided = Se ha introducido informaci\u00F3n de fuente sin un t\u
 StatisticsUpdatedDaily = Atenci\u00F3n: Los datos estad\u00EDsticos se actualizan diariamente.
 
 TitleNotProvided = Se requiere un t\u00EDtulo.
+
+TotalNumberOfPagesNotProvided = [NEW] Die Gesamtseitenzahl muss angegeben werden.
 
 UploadFileNotProvided = NEW: Please select a file
 
@@ -158,6 +184,8 @@ basket_SingleAddedSuccessfully = El item ha sido a\u00F1adido a la cesta.
 basket_SingleAlreadyInBasket = El item est\u00E1 ya en la cesta.
 
 basket_SingleRemovedSuccessfully = El item ha sido retirado de la cesta.
+
+chooseWorkspace = Please choose a workspace to edit the items.
 
 copyright = EOI
 
