--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -34,8 +34,6 @@ Affiliations_reloaded = ... \u7D44\u7E54\u56F3\u60C5\u5831\u3092\u518D\u8AAD\u30
 
 AuthorNotProvided = \u8457\u8005\u306E\u7A2E\u5225\u3092\u5165\u529B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
-chooseWorkspace = Please choose a workspace to edit the items.
-
 ComponentContentCategoryNotProvided = \u767B\u9332\u30D5\u30A1\u30A4\u30EB\u306E\u5185\u5BB9\u7A2E\u5225\uFF08\u8981\u65E8\u3001\u30D7\u30EC\u30D7\u30EA\u30F3\u30C8\u306A\u3069\uFF09\u304C\u6307\u5B9A\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 
 ComponentContentCategoryNotProvidedEasySubmission = An attached file is missing a content type (e.g. Abstract, Pre-print, etc.). Please add this information and upload the file again.
@@ -55,6 +53,8 @@ ComponentVisibilityNotProvided = An attached file is missing the specification o
 ConfirmRollbackItemVersion = Do you wish to replace the current version with this version?
 
 CreatorFamilyNameNotProvided = \u4F5C\u8005\u60C5\u5831\u306E\u3046\u3061\u59D3\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
+
+CreatorGivennameNotProvided = [NEW] Der Vorname des Urhebers muss noch angegeben werden.
 
 CreatorNotProvided = \u5C11\u306A\u304F\u3068\u30821\u540D\u5206\u306F\u4F5C\u8005\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 
@@ -86,7 +86,11 @@ ErrorParsingCreatorString = The given creator string is empty or couldn't be par
 
 EventNotProvided = \u4F1A\u8B70\u8AD6\u6587\u3001\u4F1A\u8B70\u8AD6\u6587\u96C6\u3001\u8B1B\u6F14\u3001\u4F1A\u8B70\u5831\u544A\u66F8\u3001\u6559\u6750\u306E\u8CC7\u6599\u7A2E\u5225\u306E\u5834\u5408\u3001\u30A4\u30D9\u30F3\u30C8\u60C5\u5831\u3092\u5165\u529B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
+EventPlaceRequired = [NEW] Der Ort der Veranstaltung muss angegeben werden.
+
 EventTitleNotProvided = \u30A4\u30D9\u30F3\u30C8\u60C5\u5831\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u3059\u304C\u3001\u30A4\u30D9\u30F3\u30C8\u540D\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
+
+EventTitleRequired = [NEW] Der Name der Veranstaltung muss angegeben werden.
 
 GenreNotProvided = \u7A2E\u5225\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 
@@ -117,7 +121,13 @@ MpdlCreatorRequired = \u5C11\u306A\u304F\u3068\u3082\u8457\u8005\u306E\u3046\u30
 
 NoConeJournal = No CONE Journal. 
 
+NoMaxPlanckAffiliation = [NEW] Mindestens ein Urheber muss einer Max Planck Einrichtung zugeordnet sein.
+
 NoPublicFileProvided = \u5C11\u306A\u304F\u3068\u30821\u3064\u4EE5\u4E0A\u306E\u516C\u958B\u30D5\u30A1\u30A4\u30EB\u3092\u30A2\u30C3\u30D7\u30ED\u30FC\u30C9\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
+
+NoSequenceInformationGiven = [NEW] Entweder die Artikelnummer oder Start- und Endseite m\u00FCssen angegeben werden.
+
+NoYearbookGenre = [NEW] Dieser Dokumenttyp ist f\u00FCr das Jahrbuch nicht zugelassen.
 
 NumberOfPagesAssumed = Number of pages is assumed.
 
@@ -129,11 +139,25 @@ PublisherNameNotProvided = \u51FA\u7248\u8005\u60C5\u5831\u304C\u5165\u529B\u305
 
 PublisherNameSourceNotProvided = Publishing information was entered without a publisher in the source. 
 
+PublisherNotProvided = [NEW] Der Verlag muss angegeben werden.
+
+PublisherPlaceNotProvided = [NEW] Der Verlagsort muss angegeben werden.
+
+PublishingDateNotProvided = [NEW] Es muss ein Erscheinungsdatum angegeben werden.
+
 ReviewMethodInternalNotProvided = \u67FB\u8AAD\u7A2E\u5225\u3092\u300C\u5185\u90E8\u5BE9\u67FB\u300D\u306B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
 ReviewMethodNotProvided = \u7D19\u7248\u51FA\u7248\u65E5\u3092\u5165\u529B\u3057\u305F\u5834\u5408\u3001\u67FB\u8AAD\u7A2E\u5225\u3082\u5165\u529B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
 SlashInFilename = \u30D5\u30A1\u30A4\u30EB\u540D\u306B\u30B9\u30E9\u30C3\u30B7\u30E5\u304C\u542B\u307E\u308C\u3066\u3044\u306A\u3044\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
+
+SourceCreatorFamilyNameNotProvided = [NEW] Der Nachname des Urhebers der Quelle muss angegeben werden.
+
+SourceCreatorGivennameNotProvided = [NEW] Der Vorname des Urhebers der Quelle muss angeben werden.
+
+SourceCreatorOrganizationNameNotProvided = [NEW] Der Name des Urhebers (Organisation) der Quelle muss angegeben werden.
+
+SourceCreatorRoleInvalid = [NEW] Der Urheber der Quelle muss entweder Autor oder Herausgeber sein.
 
 SourceCreatorRoleNotProvided = \u51FA\u7248\u7269\u306E\u4F5C\u8005\u7A2E\u5225\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 
@@ -152,6 +176,8 @@ StartPageNotProvided = Start Page required.
 StatisticsUpdatedDaily = \ \u6CE8\u610F: \u5229\u7528\u7D71\u8A08\u30C7\u30FC\u30BF\u306F\u4E00\u65E5\u306B\u4E00\u56DE\u3060\u3051\u66F4\u65B0\u3055\u308C\u307E\u3059\u3002
 
 TitleNotProvided = \u30BF\u30A4\u30C8\u30EB\u60C5\u5831\u3092\u5165\u529B\u3057\u3066\u304F\u3060\u3055\u3044\u3002
+
+TotalNumberOfPagesNotProvided = [NEW] Die Gesamtseitenzahl muss angegeben werden.
 
 UnknownLanguageCode = The given language code does not exist in ISO639-3
 
@@ -192,6 +218,8 @@ basket_SingleAddedSuccessfully = \u4E00\u6642\u4FDD\u5B58\u306B\u30A2\u30A4\u30C
 basket_SingleAlreadyInBasket = \u3053\u306E\u30A2\u30A4\u30C6\u30E0\u306F\u3059\u3067\u306B\u4E00\u6642\u4FDD\u5B58\u306B\u767B\u9332\u6E08\u307F\u3067\u3059\u3002
 
 basket_SingleRemovedSuccessfully = The item was removed from the basket.
+
+chooseWorkspace = Please choose a workspace to edit the items.
 
 copyright = \u00A9 2007 Max Planck Society
 
