--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -34,8 +34,6 @@ Affiliations_reloaded = ... affiliation tree was reloaded.
 
 AuthorNotProvided = A creator of type author has to be provided.
 
-chooseWorkspace = Please choose a workspace to edit the items.
-
 ComponentContentCategoryNotProvided = An attached file is missing a content type (e.g. Abstract, Pre-print, etc.).
 
 ComponentContentCategoryNotProvidedEasySubmission = An attached file is missing a content type (e.g. Abstract, Pre-print, etc.). Please add this information and upload the file again.
@@ -55,6 +53,8 @@ ComponentVisibilityNotProvided = An attached file is missing the specification o
 ConfirmRollbackItemVersion = Do you wish to replace the current version with this version?
 
 CreatorFamilyNameNotProvided = A creator's family name is not provided.
+
+CreatorGivennameNotProvided = [NEW] Der Vorname des Urhebers muss noch angegeben werden.
 
 CreatorNotProvided = At least one creator is required.
 
@@ -86,7 +86,11 @@ ErrorParsingCreatorString = The given creator string is empty or couldn't be par
 
 EventNotProvided = If genre is equal to "Proceedings", "Conference Paper", "Talk at event", "Conference Report" or "Teaching", an event has to be provided.
 
+EventPlaceRequired = [NEW] Der Ort der Veranstaltung muss angegeben werden.
+
 EventTitleNotProvided = If event data are entered, an event title has to be given, too.
+
+EventTitleRequired = [NEW] Der Name der Veranstaltung muss angegeben werden.
 
 GenreNotProvided = Please specify the Genre.
 
@@ -120,7 +124,13 @@ MpdlCreatorRequired = At least one author has to be the MPDL or affiliated to it
 
 NoConeJournal = No CONE Journal. 
 
+NoMaxPlanckAffiliation = [NEW] Mindestens ein Urheber muss einer Max Planck Einrichtung zugeordnet sein.
+
 NoPublicFileProvided = At least one file with visibility "public" has to be uploaded for the item.
+
+NoSequenceInformationGiven = [NEW] Entweder die Artikelnummer oder Start- und Endseite m\u00FCssen angegeben werden.
+
+NoYearbookGenre = [NEW] Dieser Dokumenttyp ist f\u00FCr das Jahrbuch nicht zugelassen.
 
 NumberOfPagesAssumed = Number of pages is assumed.
 
@@ -132,11 +142,25 @@ PublisherNameNotProvided = Publishing information was entered without a publishe
 
 PublisherNameSourceNotProvided = Publishing information was entered without a publisher in the source. 
 
+PublisherNotProvided = [NEW] Der Verlag muss angegeben werden.
+
+PublisherPlaceNotProvided = [NEW] Der Verlagsort muss angegeben werden.
+
+PublishingDateNotProvided = [NEW] Es muss ein Erscheinungsdatum angegeben werden.
+
 ReviewMethodInternalNotProvided = The Review Method has to have the value "internal".
 
 ReviewMethodNotProvided = If a date of type "published in print" is given, the review type has to be provided.
 
 SlashInFilename = The filename must not contain a slash "/".
+
+SourceCreatorFamilyNameNotProvided = [NEW] Der Nachname des Urhebers der Quelle muss angegeben werden.
+
+SourceCreatorGivennameNotProvided = [NEW] Der Vorname des Urhebers der Quelle muss angeben werden.
+
+SourceCreatorOrganizationNameNotProvided = [NEW] Der Name des Urhebers (Organisation) der Quelle muss angegeben werden.
+
+SourceCreatorRoleInvalid = [NEW] Der Urheber der Quelle muss entweder Autor oder Herausgeber sein.
 
 SourceCreatorRoleNotProvided = The role of a creator of a source is not provided.
 
@@ -158,6 +182,8 @@ StartPageNotProvided = Start Page required.
 StatisticsUpdatedDaily = Notice: The statistic data is updated on a daily basis.
 
 TitleNotProvided = Title is required.
+
+TotalNumberOfPagesNotProvided = [NEW] Die Gesamtseitenzahl muss angegeben werden.
 
 UnknownLanguageCode = The given language code does not exist in ISO639-3
 
@@ -198,6 +224,8 @@ basket_SingleAddedSuccessfully = The item was added to the basket.
 basket_SingleAlreadyInBasket = The item is already in the basket.
 
 basket_SingleRemovedSuccessfully = The item was removed from the basket.
+
+chooseWorkspace = Please choose a workspace to edit the items.
 
 copyright = \u00A9 2007 Max Planck Society
 
