--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -158,6 +158,8 @@ SourceCreatorRoleInvalid = [NEW] Der Urheber der Quelle muss entweder Autor oder
 
 SourceCreatorRoleNotProvided = Die Rolle des Urhebers der Quelle muss angegeben werden.
 
+SourceEditionNotProvided = [NEW] Die Ausgabe der Quelle muss angegeben werden.
+
 SourceGenreNotProvided = Wenn bei einer Quelle der Titel angegeben wurde, muss ebenfalls ein Genre f\u00FCr die Quelle angegeben werden. 
 
 SourceNotProvided = Wenn das Genre "Zeitschriftenartikel", "Buchkapitel" oder "Konferenzbeitrag" gew\u00E4hlt ist, muss mindestens eine Quelle angegeben werden.
