--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -164,6 +164,8 @@ SourceCreatorRoleInvalid = [NEW] Der Urheber der Quelle muss entweder Autor oder
 
 SourceCreatorRoleNotProvided = The role of a creator of a source is not provided.
 
+SourceEditionNotProvided = [NEW] Die Ausgabe der Quelle muss angegeben werden.
+
 SourceGenreNotProvided = If a source title was entered, a source genre has to be entered, too.
 
 SourceNotProvided = If genre is equal to "Journal Article", "Book Chapter" or "Conference Paper" at least one source has to be provided.
