--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -137,6 +137,8 @@ SourceCreatorRoleInvalid = [NEW] Der Urheber der Quelle muss entweder Autor oder
 
 SourceCreatorRoleNotProvided = No se ha proporcionado el rol de creador de una fuente.
 
+SourceEditionNotProvided = [NEW] Die Ausgabe der Quelle muss angegeben werden.
+
 SourceGenreNotProvided = Si se ha introducido un t\u00EDtulo de fuente, debe introducirse tambi\u00E9n un g\u00E9nero de fuente.
 
 SourceNotProvided = Si el g\u00E9nero es igual a "Art\u00EDculo de revista", "Cap\u00EDtulo de Libro" o "Presentaciones a Congresos" se debe proporcionar al menos una fuente.
