--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -161,6 +161,8 @@ SourceCreatorRoleInvalid = [NEW] Der Urheber der Quelle muss entweder Autor oder
 
 SourceCreatorRoleNotProvided = \u51FA\u7248\u7269\u306E\u4F5C\u8005\u7A2E\u5225\u304C\u5165\u529B\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 
+SourceEditionNotProvided = [NEW] Die Ausgabe der Quelle muss angegeben werden.
+
 SourceGenreNotProvided = \u51FA\u7248\u7269\u540D\u3092\u5165\u529B\u3057\u305F\u5834\u5408\u3001\u51FA\u7248\u7269\u306E\u7A2E\u5225\u3082\u5165\u529B\u3059\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
 
 SourceNotProvided = \u300C\u5B66\u8853\u96D1\u8A8C\u300D\u300C\u66F8\u7C4D\u300D\u300C\u4F1A\u8B70\u8AD6\u6587\u300D\u306E\u8CC7\u6599\u7A2E\u5225\u3067\u306F\u3001\u51FA\u7248\u7269\u60C5\u5831\u3092\u52A0\u3048\u308B\u5FC5\u8981\u304C\u3042\u308A\u307E\u3059\u3002
