--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -168,6 +168,16 @@ ViewItemFull_withdrawn = \u00A1Este item ha sido retirado!
 #
 ViewItem_deleteConfirmation = \u00BFEst\u00E1 seguro de que quiere eliminar este item?
 
+Yearbook_AddedItemsToYearbook = Item(s) successfully added to yearbook
+
+Yearbook_ErrorAddingMembers = Error while adding members
+
+Yearbook_ErrorRemovingMembers = Error while removing members
+
+Yearbook_ItemAlreadyInYearbook = Item is already in Yearbook
+
+Yearbook_RemovedItemsFromYearbook = Item(s) successfully removed from yearbook
+
 basket_ItemsChanged = item(s) han cambiado su estado de forma que usted ya no est\u00E1 autorizado a ver la \u00FAltima versi\u00F3n. Estos items han sido retirados de su cesta temporalmente hasta que la \u00FAltima versi\u00F3n est\u00E9 disponible de nuevo.
 
 #
