Former-commit-id: 6a59f7321d234142849ea9f4d4aaa2f368694476

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -2555,3 +2555,5 @@ viewItemFullPage = Datensatz ansehen
 warning_lblMessageHeader = Systemnachrichten und Warnungen:
 
 yes = Ja
+
+Yearbook_validationMessageHeader = Jahrbuch Validierung Informationen
