--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -2555,3 +2555,5 @@ viewItemFullPage = View item
 warning_lblMessageHeader = System Messages and Warnings:
 
 yes = Yes
+
+Yearbook_validationMessageHeader = Yearbook Validation Messages
