--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -2455,3 +2455,5 @@ viewItemFullPage = Ver Item
 warning_lblMessageHeader = Mensajes del Sistema y Advertencias:
 
 yes = S\u00ED
+
+Yearbook_validationMessageHeader = Yearbook Validation Messages
