--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -2520,3 +2520,5 @@ viewItemFullPage = \u8A73\u7D30\u8868\u793A
 warning_lblMessageHeader = \u30B7\u30B9\u30C6\u30E0\u30E1\u30C3\u30BB\u30FC\u30B8 / \u8B66\u544A:
 
 yes = \u62DB\u5F85
+
+Yearbook_validationMessageHeader = Yearbook Validation Messages
