Former-commit-id: 932fd6154ba5b55f109b7e849e6195b2ba40aaf1

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1626,23 +1626,25 @@ WorkspacesPage = Arbeitsbereiche
 
 Year = Jahr
 
-YearbookCandidatesPage = Kandidaten
+YearbookCandidatesPage = [NEW] Kandidaten
 
-YearbookInvalidItemsPage = Ung\u00FCltige Datens\u00E4tze\u0009
+YearbookInvalidItemsPage = [NEW] Ung\u00FCltige Datens\u00E4tze\u0009
 
-YearbookItemCreatePage = Erstelle Jahrbuch
+YearbookItemCreatePage = [NEW] Erstelle Jahrbuch
 
-YearbookMembersPage = Mitglieder
+YearbookMembersPage = [NEW] Mitglieder
 
-YearbookNonCandidatesPage = Andere
+YearbookNonCandidatesPage = [NEW] Andere
 
-YearbookPage = Jahrbuch
+YearbookPage = [NEW] Jahrbuch
 
-Yearbook_addToYearbook = Dem Jahrbuch hinzuf\u00FCgen
+Yearbook_addToYearbook = [NEW] Dem Jahrbuch hinzuf\u00FCgen
 
-Yearbook_removeFromYearbook = Aus dem Jahrbuch entfernen
+Yearbook_removeFromYearbook = [NEW] Aus dem Jahrbuch entfernen
 
-Yearbook_validate = Validieren
+Yearbook_validate = [NEW] Validieren
+
+Yearbook_validationMessageHeader = [NEW] Jahrbuch Validierungsinformationen
 
 about = \u00DCber PubMan
 
@@ -2555,5 +2557,3 @@ viewItemFullPage = Datensatz ansehen
 warning_lblMessageHeader = Systemnachrichten und Warnungen:
 
 yes = Ja
-
-Yearbook_validationMessageHeader = Jahrbuch Validierung Informationen
