--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -1625,23 +1625,25 @@ WorkspacesPage = Workspaces
 
 Year = Year
 
-YearbookCandidatesPage = Candidates
+YearbookCandidatesPage = [NEW] Candidates
 
-YearbookInvalidItemsPage = Invalid Items
+YearbookInvalidItemsPage = [NEW] Invalid Items
 
-YearbookItemCreatePage = Create Yearbook
+YearbookItemCreatePage = [NEW] Create Yearbook
 
-YearbookMembersPage = Members
+YearbookMembersPage = [NEW] Members
 
-YearbookNonCandidatesPage = Non Candidates
+YearbookNonCandidatesPage = [NEW] Non Candidates
 
-YearbookPage = Yearbook
+YearbookPage = [NEW] Yearbook
 
-Yearbook_addToYearbook = Add to Yearbook
+Yearbook_addToYearbook = [NEW] Add to Yearbook
 
-Yearbook_removeFromYearbook = Remove from Yearbook
+Yearbook_removeFromYearbook = [NEW] Remove from Yearbook
 
-Yearbook_validate = Validate
+Yearbook_validate = [NEW] Validate
+
+Yearbook_validationMessageHeader = [NEW] Yearbook Validation Messages
 
 about = About PubMan
 
@@ -2555,5 +2557,3 @@ viewItemFullPage = View item
 warning_lblMessageHeader = System Messages and Warnings:
 
 yes = Yes
-
-Yearbook_validationMessageHeader = Yearbook Validation Messages
