--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -1602,23 +1602,25 @@ WorkspacesPage = Workspaces
 
 Year = \u520A\u884C\u5E74
 
-YearbookCandidatesPage = Candidates
+YearbookCandidatesPage = [NEW] Candidates
 
-YearbookInvalidItemsPage = Invalid Items
+YearbookInvalidItemsPage = [NEW] Invalid Items
 
-YearbookItemCreatePage = Create Yearbook
+YearbookItemCreatePage = [NEW] Create Yearbook
 
-YearbookMembersPage = Members
+YearbookMembersPage = [NEW] Members
 
-YearbookNonCandidatesPage = Non Candidates
+YearbookNonCandidatesPage = [NEW] Non Candidates
 
-YearbookPage = Yearbook
+YearbookPage = [NEW] Yearbook
 
-Yearbook_addToYearbook = Add to Yearbook
+Yearbook_addToYearbook = [NEW] Add to Yearbook
 
-Yearbook_removeFromYearbook = Remove from Yearbook
+Yearbook_removeFromYearbook = [NEW] Remove from Yearbook
 
-Yearbook_validate = Validate
+Yearbook_validate = [NEW] Validate
+
+Yearbook_validationMessageHeader = [NEW] Yearbook Validation Messages
 
 about = PubMan\u306B\u3064\u3044\u3066
 
@@ -2520,5 +2522,3 @@ viewItemFullPage = \u8A73\u7D30\u8868\u793A
 warning_lblMessageHeader = \u30B7\u30B9\u30C6\u30E0\u30E1\u30C3\u30BB\u30FC\u30B8 / \u8B66\u544A:
 
 yes = \u62DB\u5F85
-
-Yearbook_validationMessageHeader = Yearbook Validation Messages
