--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -202,15 +202,15 @@ ViewItemFull_withdrawn = Dieser Datensatz wurde zur\u00FCckgezogen!
 #
 ViewItem_deleteConfirmation = Wollen Sie den Datensatz wirklich l\u00F6schen?
 
-Yearbook_AddedItemsToYearbook = Datensatz erfolgreich zum Jahrbuch hinzugef\u00FCgt
+Yearbook_AddedItemsToYearbook = [NEW] Datensatz erfolgreich zum Jahrbuch hinzugef\u00FCgt
 
-Yearbook_ErrorAddingMembers = Fehler beim Hinzuf\u00FCgen
+Yearbook_ErrorAddingMembers = [NEW] Fehler beim Hinzuf\u00FCgen
 
-Yearbook_ErrorRemovingMembers = Fehler beim Entfernen des Datensatzes
+Yearbook_ErrorRemovingMembers = [NEW] Fehler beim Entfernen des Datensatzes
 
-Yearbook_ItemAlreadyInYearbook = Datensatz befindet sich bereits im Jahrbuch
+Yearbook_ItemAlreadyInYearbook = [NEW] Datensatz befindet sich bereits im Jahrbuch
 
-Yearbook_RemovedItemsFromYearbook = Datensatz erfolgreich aus dem Jahrbuch entfernt
+Yearbook_RemovedItemsFromYearbook = [NEW] Datensatz erfolgreich aus dem Jahrbuch entfernt
 
 basket_ItemsChanged = Datens\u00E4tze haben ihren Status so ver\u00E4ndert dass Sie nicht mehr befugt sind die aktuellste Version zu sehen. Diese Datens\u00E4tze wurden vor\u00FCbergehend aus der Ablage entfernt bis sie wieder zur Verf\u00FCgung stehen.
 
