--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -202,15 +202,15 @@ ViewItemFull_withdrawn = \u3053\u306E\u30A2\u30A4\u30C6\u30E0\u306F\u53D6\u308A\
 #
 ViewItem_deleteConfirmation = \u672C\u5F53\u306B\u3053\u306E\u30A2\u30A4\u30C6\u30E0\u3092\u524A\u9664\u3057\u3066\u3082\u3088\u308D\u3057\u3044\u3067\u3059\u304B?
 
-Yearbook_AddedItemsToYearbook = Item(s) successfully added to yearbook
+Yearbook_AddedItemsToYearbook = [NEW] Item(s) successfully added to yearbook
 
-Yearbook_ErrorAddingMembers = Error while adding members
+Yearbook_ErrorAddingMembers = [NEW] Error while adding members
 
-Yearbook_ErrorRemovingMembers = Error while removing members
+Yearbook_ErrorRemovingMembers = [NEW] Error while removing members
 
-Yearbook_ItemAlreadyInYearbook = Item is already in Yearbook
+Yearbook_ItemAlreadyInYearbook = [NEW] Item is already in Yearbook
 
-Yearbook_RemovedItemsFromYearbook = Item(s) successfully removed from yearbook
+Yearbook_RemovedItemsFromYearbook = [NEW] Item(s) successfully removed from yearbook
 
 basket_ItemsChanged = item(s) have changed their state in a way that you are not allowed to see the latest version any more. These items have been removed temporarily from your basket until the latest version is available agai
 
