--- a/pubman/pubman_presentation/src/main/resources/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_es.properties
@@ -1615,23 +1615,25 @@ WithdrawItem_lnkWithdraw = Retirar
 
 WorkspacesPage = Workspaces
 
-YearbookCandidatesPage = Candidates
+YearbookCandidatesPage = [NEW] Candidates
 
-YearbookInvalidItemsPage = Invalid Items
+YearbookInvalidItemsPage = [NEW] Invalid Items
 
-YearbookItemCreatePage = Create Yearbook
+YearbookItemCreatePage = [NEW] Create Yearbook
 
-YearbookMembersPage = Members
+YearbookMembersPage = [NEW] Members
 
-YearbookNonCandidatesPage = Non Candidates
+YearbookNonCandidatesPage = [NEW] Non Candidates
 
-YearbookPage = Yearbook
+YearbookPage = [NEW] Yearbook
 
-Yearbook_addToYearbook = Add to Yearbook
+Yearbook_addToYearbook = [NEW] Add to Yearbook
 
-Yearbook_removeFromYearbook = Remove from Yearbook
+Yearbook_removeFromYearbook = [NEW] Remove from Yearbook
 
-Yearbook_validate = Validate
+Yearbook_validate = [NEW] Validate
+
+Yearbook_validationMessageHeader = [NEW] Yearbook Validation Messages
 
 about = Sobre PubMan
 
@@ -2455,5 +2457,3 @@ viewItemFullPage = Ver Item
 warning_lblMessageHeader = Mensajes del Sistema y Advertencias:
 
 yes = S\u00ED
-
-Yearbook_validationMessageHeader = Yearbook Validation Messages
