--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -208,15 +208,15 @@ ViewItemFull_withdrawn = This item is withdrawn!
 #
 ViewItem_deleteConfirmation = Do you really want to delete this item?
 
-Yearbook_AddedItemsToYearbook = Item(s) successfully added to yearbook
+Yearbook_AddedItemsToYearbook = [NEW] Item(s) successfully added to yearbook
 
-Yearbook_ErrorAddingMembers = Error while adding members
+Yearbook_ErrorAddingMembers = [NEW] Error while adding members
 
-Yearbook_ErrorRemovingMembers = Error while removing members
+Yearbook_ErrorRemovingMembers = [NEW] Error while removing members
 
-Yearbook_ItemAlreadyInYearbook = Item is already in Yearbook
+Yearbook_ItemAlreadyInYearbook = [NEW] Item is already in Yearbook
 
-Yearbook_RemovedItemsFromYearbook = Item(s) successfully removed from yearbook
+Yearbook_RemovedItemsFromYearbook = [NEW] Item(s) successfully removed from yearbook
 
 basket_ItemsChanged = item(s) have changed their state in a way that you are not allowed to see the latest version any more. These items have been removed temporarily from your basket until the latest version is available again.
 
